# LiveLoRA

./: .gitignore  CLAUDE.md  ChatGPT - Additional Feedback.md  LiveLoRA - Brief.md  README.md  ROADMAP.md  pyproject.toml  run_benchmarks.sh
experiments/: arc_benchmark.py  benchmark_ph.py  correlation_study.py  delta_comparison.py  gate_ablation.py  gsm8k_benchmark.py  three_way_comparison.py  threshold_sweep.py  toy_ttt.py
livelora/: __init__.py
livelora/core/: gen_controller.py  lora_adapter.py  scalenet.py  ttt_loop.py
livelora/data/: chatgpt_loader.py
livelora/topology/: entropy_loss.py  ph_loss.py  ph_tracker.py
outputs/results/: arc_challenge_0.8b.json  gate_ablation_qwen.json  gsm8k_benchmark_qwen.json  gsm8k_benchmark_qwen4b.json  threshold_sweep_qwen.json
tests/: test_chatgpt_loader.py  test_gen_controller.py  test_lora_adapter.py  test_ph_loss.py  test_ph_tracker.py
